<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_item_mysearching"
            android:id="@+id/nitMySearching"
            android:icon="@drawable/account_searchs"
            android:checked="true"/>
        <item android:title="@string/nav_item_search"
            android:id="@+id/nitSearch"
            android:icon="@drawable/search" />
        <item android:title="@string/nav_item_ranking"
            android:id="@+id/nitRanking"
            android:icon="@drawable/ranking" />
        <item android:id="@+id/nitConfigurationSection"
            android:title="@string/nit_configuration">
            <menu>
                <item android:id="@+id/nitProfile"
                    android:icon="@drawable/account_settings"
                    android:title="@string/nit_profile" />
                <item android:id="@+id/nitLogout"
                    android:icon="@drawable/logout"
                    android:title="@string/nit_logout" />
            </menu>
        </item>
    </group>
</menu>