<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.ImageConfirmationFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPreSending"
            android:layout_width="336dp"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/login_logo"
            android:elevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSendImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.274"
            app:srcCompat="@drawable/quieroentradas_logo" />

        <Button
            android:id="@+id/btnSendImage"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="72dp"
            android:text="@string/btnSendImage"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnCancelImage"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCancelImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="72dp"
            android:text="@string/btnCancelImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>