<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/colorLead"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:elevation="8dp"
            android:contentDescription="@string/login_logo"
            app:srcCompat="@drawable/quieroentradas_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="100dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/FieldErrorTextNormal"
            app:hintTextAppearance="@style/FieldHintTextNormal">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textSize="20sp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:theme="@style/FieldTextNormal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/FieldErrorTextNormal"
            app:hintTextAppearance="@style/FieldHintTextNormal"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:textSize="20sp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:theme="@style/FieldTextNormal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="10dp"
            android:text="@string/login_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite2"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/signup_button"
            android:textAllCaps="false"
            android:textColor="@color/colorStatusBar"
            android:textSize="16sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>