<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/profileEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/navDrawerUser"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_main_user" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/profileFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/profile_email_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="left"
            android:text=""
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/profileUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        app:layout_constraintVertical_bias="0.155">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/profile_name_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="left"
            android:text=""
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/profileSex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFullname"
        app:layout_constraintVertical_bias="0.014">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/profile_username_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text=""
            android:gravity="left"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toTopOf="@+id/profileCreationDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUsername"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/profile_sex_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="left"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileCreationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSex"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/profile_creation_date_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:gravity="left"
            android:text="" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>